--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -234,7 +234,7 @@
         .document {
           &-title {
             // 문서 번호
-            .document-numbering {
+            .z-document-numbering {
               font-size: 1rem; // 16px
               font-weight: $font-weight-regular;
               color: $gray;
