--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -827,20 +827,20 @@ input, button, select, optgroup, textarea {
 }
 
 /* 신청서 / 처리할 문서 양식 layout
- * document-container
- *                - document-main : 문서양식 메인
- *                             - document-main-header : 문서 번호, 버튼 등이 그려지는 영역
- *                             - drawing-board : 실제 컴포넌트들이 그려지는 영역 (컴포넌트 디자인 수정 > form/_component.scss )
+ * z-document-container
+ *                - z-document-main : 문서양식 메인
+ *                             - z-document-main-header : 문서 번호, 버튼 등이 그려지는 영역
+ *                             - z-drawing-board : 실제 컴포넌트들이 그려지는 영역 (컴포넌트 디자인 수정 > form/_component.scss )
  *                - token-properties : 문서이력, 관련문서, 의견, 태그
  */
-.document-container {
+.z-document-container {
   max-width: 120rem;
   margin: 0 auto;
 }
-.document-container .document-main {
+.z-document-container .z-document-main {
   position: fixed;
   top: 0;
-  right: 18.75rem;
+  right: 38.13rem;
   bottom: 0;
   left: 0;
   overflow-y: auto;
@@ -850,22 +850,33 @@ input, button, select, optgroup, textarea {
   scrollbar-width: none;
   /* Firefox */
 }
-.document-container .document-main::-webkit-scrollbar {
+.z-document-container .z-document-main::-webkit-scrollbar {
   display: none;
   /* Chrome, Safari, Opera*/
 }
-.document-container .document-main.preview .input {
-  pointer-events: none;
-}
-.document-container .document-main .document-main-header {
+.z-document-container .z-document-main .z-document-main-header {
   width: 60rem;
   max-width: 60rem;
-  padding: 8.438rem 0 0.9375rem 0;
+  padding: 4rem 0 0.75rem 0;
 }
-.document-container .document-main .document-main-header .z-button-area .z-button-list:first-child {
-  margin-right: 0.5rem;
+.z-document-container .z-document-main .z-document-main-header .z-document-numbering {
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
+  font-size: 0.875rem;
+  color: #222529;
 }
-.document-container .token-properties {
+.z-document-container .z-document-main .z-document-main-header .z-action-button-top-area {
+  width: 100%;
+  margin: 0.75rem 0 0 0;
+}
+.z-document-container .z-document-main .z-document-main-header .z-action-button-top-area .z-button-list {
+  width: 100%;
+}
+.z-document-container .z-document-main .z-document-main-footer {
+  width: 60rem;
+  max-width: 60rem;
+  padding: 0.75rem 0 4rem 0;
+}
+.z-document-container .token-properties {
   position: fixed;
   top: 0;
   right: 0;
@@ -876,11 +887,11 @@ input, button, select, optgroup, textarea {
   padding: 0 4.0625rem;
   overflow-y: auto;
 }
-.document-container .token-properties .token-info-tab {
+.z-document-container .token-properties .token-info-tab {
   display: flex;
   margin-top: 7.8125rem;
 }
-.document-container .token-properties .token-info-tab h4 {
+.z-document-container .token-properties .token-info-tab h4 {
   font-size: 1.125rem;
   font-weight: 500;
   color: #ACB4BF;
@@ -889,34 +900,34 @@ input, button, select, optgroup, textarea {
   border-bottom: 0.125rem solid #E1E3E6;
   cursor: pointer;
 }
-.document-container .token-properties .token-info-tab .active {
+.z-document-container .token-properties .token-info-tab .active {
   color: #3F4B56;
   border-bottom: 0.25rem solid #0098FF;
 }
-.document-container .token-properties .token-info-contents {
+.z-document-container .token-properties .token-info-contents {
   height: 43.75rem;
   overflow-y: auto;
 }
-.document-container .token-properties .token-info-contents .token-tag {
+.z-document-container .token-properties .token-info-contents .token-tag {
   display: none;
   margin-top: 1.25rem;
 }
-.document-container .token-properties .token-info-contents .token-history {
+.z-document-container .token-properties .token-info-contents .token-history {
   height: 100%;
 }
-.document-container .token-properties .token-info-contents .token-history .table {
+.z-document-container .token-properties .token-info-contents .token-history .table {
   width: 100%;
 }
-.document-container .token-properties .token-info-contents .token-history .table thead {
+.z-document-container .token-properties .token-info-contents .token-history .table thead {
   border-bottom: 0.0625rem solid #E1E3E6;
 }
-.document-container .token-properties .token-info-contents .token-history .table thead tr {
+.z-document-container .token-properties .token-info-contents .token-history .table thead tr {
   display: flex;
   flex-direction: row;
   align-items: center;
   height: 3.438rem;
 }
-.document-container .token-properties .token-info-contents .token-history .table th, .document-container .token-properties .token-info-contents .token-history .table td {
+.z-document-container .token-properties .token-info-contents .token-history .table th, .z-document-container .token-properties .token-info-contents .token-history .table td {
   display: table-cell;
   max-width: 100%;
   text-overflow: ellipsis;
@@ -924,90 +935,90 @@ input, button, select, optgroup, textarea {
   overflow: hidden;
   word-wrap: normal;
 }
-.document-container .token-properties .token-info-contents .token-history .table th {
+.z-document-container .token-properties .token-info-contents .token-history .table th {
   color: #3F4B56;
 }
-.document-container .token-properties .token-info-contents .token-history .table td {
+.z-document-container .token-properties .token-info-contents .token-history .table td {
   color: #586872;
 }
-.document-container .token-properties .token-info-contents .token-history .table tbody {
+.z-document-container .token-properties .token-info-contents .token-history .table tbody {
   width: 100%;
   height: 37.5rem;
   overflow-y: auto;
 }
-.document-container .token-properties .token-info-contents .token-history .table tbody tr {
+.z-document-container .token-properties .token-info-contents .token-history .table tbody tr {
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 100%;
 }
-.document-container .token-properties .token-info-contents .token-related {
+.z-document-container .token-properties .token-info-contents .token-related {
   display: none;
   padding-top: 0.625rem;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item {
+.z-document-container .token-properties .token-info-contents .token-related .list-item {
   height: 11.5625rem;
   margin: 0.625rem 0.625rem 0 0;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item .document-color {
+.z-document-container .token-properties .token-info-contents .token-related .list-item .document-color {
   width: 0.625rem;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item .document-row {
+.z-document-container .token-properties .token-info-contents .token-related .list-item .document-row {
   flex: 1;
   border: 0.0625rem solid #EBEBEB;
   padding: 1.25rem 2.5rem;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item .document-row-content a {
+.z-document-container .token-properties .token-info-contents .token-related .list-item .document-row-content a {
   width: 100%;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item .document-row-content a .document-title {
+.z-document-container .token-properties .token-info-contents .token-related .list-item .document-row-content a .document-title {
   word-break: break-word;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item .document-row-content a .document-title h5:first-child {
+.z-document-container .token-properties .token-info-contents .token-related .list-item .document-row-content a .document-title h5:first-child {
   font-weight: 500;
   color: #3F4B56;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item .document-row-content a .document-title h5:last-child {
+.z-document-container .token-properties .token-info-contents .token-related .list-item .document-row-content a .document-title h5:last-child {
   font-weight: 400;
   color: #ACB4BF;
   margin-left: 0.3125rem;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item .document-row-content button {
+.z-document-container .token-properties .token-info-contents .token-related .list-item .document-row-content button {
   padding: 0;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item .document-row-content button .icon-delete {
+.z-document-container .token-properties .token-info-contents .token-related .list-item .document-row-content button .icon-delete {
   background: #CCCED1;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item .document-row-topic {
+.z-document-container .token-properties .token-info-contents .token-related .list-item .document-row-topic {
   height: 100%;
   color: #586872;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item .document-row-topic h5 {
+.z-document-container .token-properties .token-info-contents .token-related .list-item .document-row-topic h5 {
   font-weight: 400;
 }
-.document-container .token-properties .token-info-contents .token-related .list-item .document-row-info h5 {
+.z-document-container .token-properties .token-info-contents .token-related .list-item .document-row-info h5 {
   color: #586872;
   font-weight: 400;
 }
-.document-container .token-properties .token-info-contents .token-related .related-add {
+.z-document-container .token-properties .token-info-contents .token-related .related-add {
   height: 11.5625rem;
   border: 0.0625rem solid #EBEBEB;
   background-color: #F7F8F9;
   margin: 0.625rem 0.625rem 0 0;
   display: flex;
 }
-.document-container .token-properties .token-info-contents .token-comment {
+.z-document-container .token-properties .token-info-contents .token-comment {
   display: none;
   padding-top: 0.625rem;
 }
-.document-container .token-properties .token-info-contents .token-comment .list-item {
+.z-document-container .token-properties .token-info-contents .token-comment .list-item {
   padding: 1.25rem 1.5625rem;
   margin: 0.625rem 0.625rem 0 0;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.1875rem;
   background-color: #F7F8F9;
 }
-.document-container .token-properties .token-info-contents .token-comment .list-item .comment-row {
+.z-document-container .token-properties .token-info-contents .token-comment .list-item .comment-row {
   color: #586872;
   margin-top: 0.625rem;
   overflow-wrap: break-word;
@@ -1017,34 +1028,34 @@ input, button, select, optgroup, textarea {
   white-space: -moz-pre-wrap;
   word-break: break-all;
 }
-.document-container .token-properties .token-info-contents .token-comment .list-item .comment-row-info .user-name {
+.z-document-container .token-properties .token-info-contents .token-comment .list-item .comment-row-info .user-name {
   color: #586872;
 }
-.document-container .token-properties .token-info-contents .token-comment .list-item .comment-row-info .user-date-time {
+.z-document-container .token-properties .token-info-contents .token-comment .list-item .comment-row-info .user-date-time {
   color: #ACB4BF;
   margin-left: 0.625rem;
 }
-.document-container .token-properties .token-info-contents .token-comment .list-item .comment-row-info button {
+.z-document-container .token-properties .token-info-contents .token-comment .list-item .comment-row-info button {
   padding: 0;
 }
-.document-container .token-properties .token-info-contents .token-comment .list-item .comment-row-info button .icon-delete {
+.z-document-container .token-properties .token-info-contents .token-comment .list-item .comment-row-info button .icon-delete {
   background: #CCCED1;
 }
-.document-container .token-properties .token-info-contents .token-comment .list-item .comment-row-info div:last-child {
+.z-document-container .token-properties .token-info-contents .token-comment .list-item .comment-row-info div:last-child {
   margin-left: auto;
 }
-.document-container .token-properties .token-info-contents .token-comment .comment-input {
+.z-document-container .token-properties .token-info-contents .token-comment .comment-input {
   margin-top: 0.625rem;
   padding: 0;
 }
-.document-container .token-properties .token-info-contents .token-comment .comment-input textarea {
+.z-document-container .token-properties .token-info-contents .token-comment .comment-input textarea {
   flex: 1;
   min-height: 4.063rem;
   padding: 0.625rem 1.563rem;
   margin-right: 0.3125rem;
   border-radius: 0.1875rem;
 }
-.document-container .token-properties .token-info-contents .token-comment .comment-input .textarea-scroll-wrapper {
+.z-document-container .token-properties .token-info-contents .token-comment .comment-input .textarea-scroll-wrapper {
   width: 24.6875rem;
   height: 4.0625rem;
   margin-right: 0.3125rem;
@@ -1373,21 +1384,21 @@ label {
   background-position-y: 50%;
 }
 .z-input.i-date-picker {
-  background-image: url("../media/icons/icon_date_picker.svg");
+  background-image: url("../media/icons/dateTimePicker/icon_date_picker.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: calc(100% - 0.4375rem);
   background-position-y: 50%;
 }
 .z-input.i-time-picker {
-  background-image: url("../media/icons/icon_time_picker.svg");
+  background-image: url("../media/icons/dateTimePicker/icon_time_picker.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: calc(100% - 0.4375rem);
   background-position-y: 50%;
 }
 .z-input.i-datetime-picker {
-  background-image: url("../media/icons/icon_date_time_picker.svg");
+  background-image: url("../media/icons/dateTimePicker/icon_date_time_picker.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: calc(100% - 0.4375rem);
@@ -2212,7 +2223,7 @@ body.modal-active {
   display: inline-block;
   vertical-align: middle;
 }
-.modal-wrapper .modal-dialog.document-modal-dialog .document-main {
+.modal-wrapper .modal-dialog.document-modal-dialog .z-document-main {
   right: 0;
 }
 .modal-wrapper .modal-dialog.tree {
