--- a/src/main/resources/public/scss/document/_modal.scss
+++ b/src/main/resources/public/scss/document/_modal.scss
@@ -88,7 +88,7 @@
     // 신청서
     &.document-modal-dialog {
       // 신청서일 경우 우측 properties가 존재하지 않음
-      .document-main { right: 0; }
+      .z-document-main { right: 0; }
     }
     // 트리 모달
     &.tree {
