--- a/src/main/resources/public/template/formDesigner/formEditPreview.html
+++ b/src/main/resources/public/template/formDesigner/formEditPreview.html
@@ -22,9 +22,9 @@
 <body>
 <th:block layout:fragment="content">
     <form id="frm" name="frm">
-        <div class="document-container">
-            <div class="document-main flex-column align-items-center preview">
-                <div class="document-main-header flex-row justify-content-end align-items-center">
+        <div class="z-document-container">
+            <div class="z-document-main flex-column align-items-center preview">
+                <div class="z-document-main-header flex-row justify-content-end align-items-center flex-wrap">
                     <button class="z-button secondary" th:text="#{common.btn.close}" onclick="window.close();"></button>
                 </div>
                 <div class="z-drawing-board" id="documentPanel" data-readonly="true" data-display="preview"></div>
