--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -12,11 +12,11 @@
 </th:block>
 <body>
 <th:block layout:fragment="content">
-    <div class="document-container">
+    <div class="z-document-container">
         <form id="frm" name="frm">
-            <div class="document-main flex-column align-items-center">
-                <div class="document-main-header flex-row justify-content-between align-items-center">
-                    <span class="document-numbering" th:text="|#{document.label.docNo} : ${documentNo}|"></span>
+            <div class="z-document-main flex-column align-items-center">
+                <div class="z-document-main-header flex-row justify-content-between align-items-center flex-wrap">
+                    <span class="z-document-numbering" th:text="|#{document.label.docNo} : ${documentNo}|"></span>
                     <div class="z-button-list">
                         <button type="button" class="z-button form" onclick="openProcessStatusPopUp()"
                                 th:text="#{process.label.processMap}"></button>
