--- a/src/main/resources/public/template/layout/itsm/pageType/pagingListLayout.html
+++ b/src/main/resources/public/template/layout/itsm/pageType/pagingListLayout.html
@@ -6,7 +6,7 @@
 <div layout:fragment="pageTitle"></div>
 <th:block layout:fragment="pageContent">
     <div layout:fragment="pageSearching" class="z-page-search flex-row"></div>
-    <div layout:fragment="pageList" class="z-page-content flex-fill"></div>
+    <div layout:fragment="pageList" class="z-page-content"></div>
     <div layout:replace="layout/itsm/fragment/pagingAreaFragment"></div>
 </th:block>
 </body>
