--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -62,6 +62,8 @@
           }
         }
         .z-page-content {
+          display: flex;
+          flex: 1;  // flex: 1 1 0;
           padding-top: 0.9375rem; // 15px
           padding-bottom: 0.9375rem; // 15px
 
