--- a/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
@@ -27,22 +27,22 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="list" id="attributeList"></div>
+    <div class="list-content" id="attributeList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
     /*<![CDATA[*/
     window.onload = function () {
         document.getElementById('searchValue').focus();
-        document.getElementById('searchValue').addEventListener('keyup', function() { searchAttributes(); });
-        searchAttributes();
+        document.getElementById('searchValue').addEventListener('keyup', function() { getList(); });
+        getList();
     }
 
     /**
      * Attribute 검색
      */
-    function searchAttributes() {
-        restSubmit('get', '/cmdb/attributes?' + aliceJs.serialize(document.getElementById('searchFrm')));
+    function getList(pageNum = 1) {
+        restSubmit('get', '/cmdb/attributes?' + aliceJs.serialize(document.getElementById('searchFrm')) + '&pageNum=' + pageNum);
     }
 
     // REST API
@@ -54,7 +54,6 @@
             showProgressbar: false,
             callbackFunc: function (response) {
                 document.getElementById('attributeList').innerHTML = response.responseText;
-                aliceJs.showTotalCount(document.getElementById('totalCount').value);
                 OverlayScrollbars(document.querySelector('.list-body'), {
                     className: 'scrollbar'
                 });
