--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -36,13 +36,13 @@
     let offsetCount = 0;
     window.onload = function() {
         document.getElementById('searchValue').focus();
-        document.getElementById('searchValue').addEventListener('keyup', function() { getCustomCodeList(); });
-        document.getElementById('searchType').addEventListener('change', getCustomCodeList.bind(null), false);
-        getCustomCodeList(false);
+        document.getElementById('searchValue').addEventListener('keyup', function() { getList(); });
+        document.getElementById('searchType').addEventListener('change', getList.bind(null), false);
+        getList();
     };
 
-    function getCustomCodeList() {
-        restSubmit('get', '/custom-codes?' + aliceJs.serialize(document.getElementById('searchFrm')));
+    function getList(pageNum = 1) {
+        restSubmit('get', '/custom-codes?' + aliceJs.serialize(document.getElementById('searchFrm')) + '&pageNum=' + pageNum);
     }
 
     // REST API
@@ -53,7 +53,6 @@
             async: false,
             callbackFunc: function(response) {
                 document.getElementById('customCodeList').innerHTML = response.responseText;
-                aliceJs.showTotalCount(document.getElementById('totalCount').value);
                 setDateTimeFormat(document.getElementById('customCodeList'));
                 OverlayScrollbars(document.querySelector('.list-body'), {
                     className: 'scrollbar'
