#10852 보고서 구현 1. 보고서 목록 미리보기 추가 2. 차트 출력

--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -547,8 +547,12 @@
 
         /** chartConfig 파싱 진행 **/
         function parsedPropertyJson(chartConfig, property) {
+            console.log(chartConfig)
+            console.log(property)
             let chartConfigJson = JSON.parse(chartConfig);
             let propertyJson = JSON.parse(property);
+
+            console.log('xxxxxxxxxxxxx')
 
             /** Get propertyJson Data **/
             let countArray = [];
